--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <h1>Exchange Rate Calculator</h1>
+    <p>Nói nôm na là trang chuyển đổi tiền tệ đó má :D</p>
     
     <div class="container">
         <div class="currency">
