--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>EXCHANGE RATE </title>
 </head>
 <body>
     <h1>Exchange Rate Calculator</h1>
-    <p>Nói nôm na là trang chuyển đổi tiền tệ đó má :D</p>
+    <p style="color: #FFCC70;">Nếu thấy thú dị cho 1 like và 1 tim :D</p>
     
     <div class="container">
         <div class="currency">
